tests/machine/x/c/count_builtin.c
#include <stdio.h>
#include <stdlib.h>

int main() {
  int tmp1[] = {1, 2, 3};
  printf("%d\n", tmp1.len);
  return 0;
}
